Fix discord tag in dark mode

--- a/index.css
+++ b/index.css
@@ -336,7 +336,7 @@ footer {
     }
 
     .discord::after {
-        content: "Discord: lexii#0069";
+        content: "Discord: lexii#2534";
     }
 
     #li-discord:hover a div::after {
